force-app/main/default/objects/Permission_Set_Group_Testing_Result__mdt/Permission_Set_Group_Testing_Result__mdt.object-meta.xml
<CustomObject>
    <label>Permission Set Group Testing Result</label>
    <pluralLabel>Permission Set Group Testing Results</pluralLabel>
</CustomObject>