force-app/main/default/objects/Permission_Set_Group_Testing_Result__mdt/fields/Expected_Exception_Match__c.field-meta.xml
<CustomField>
    <fullName>Expected_Exception_Match__c</fullName>
    <label>Expected Exception Match</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>