force-app/main/default/objects/Permission_Set_Group_Testing_Result__mdt/fields/Failure_Log_Message__c.field-meta.xml
<CustomField>
    <fullName>Failure_Log_Message__c</fullName>
    <label>Failure Log Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>