force-app/main/default/objects/Permission_Set_Group_Testing_Result__mdt/fields/Permission_Set_Group__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Group__c</fullName>
    <label>Permission Set Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>