force-app/main/default/objects/Permission_Set_Group_Testing_Result__mdt/fields/Test_Class_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Class_Method_Name__c</fullName>
    <label>Test Class Method Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>